log
Fri 06 Oct 2023 06:30:00 PM UTC: 
 sudoku.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:68:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   68 | int main( int argc, char *argv[])
      |     ^~~~
Compilation failed
1ce5ac7
Fri 06 Oct 2023 06:30:22 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 0/70
ec30b89
Fri 06 Oct 2023 06:31:16 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
3656b99
